--- a/kbresolution/RESOLUTION.ipynb
+++ b/kbresolution/RESOLUTION.ipynb
@@ -10,34 +10,45 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.8.3-final"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python3",
+   "display_name": "Python 3.8.3 32-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "70a8f8eae77aa0782808e6cfd2856706ff3a57d0cd6b26c7758c1e171a3508dc"
+    }
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 1
+    }
+   ],
    "source": [
     "kb = []\n",
     "\n",
     "# Reset kb to an empty list\n",
     "def CLEAR():\n",
     "    global kb\n",
-    "    kb = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Insert sentence to the kb\n",
+    "    kb = []\n",
     "def TELL(sentence):\n",
     "    global kb\n",
     "    # If the sentence is a clause, insert directly.\n",
@@ -54,15 +65,7 @@
     "            for s in sentenceCNF[1:]:\n",
     "                kb.append(s)\n",
     "        else:\n",
-    "            kb.append(sentenceCNF)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "            kb.append(sentenceCNF)\n",
     "def ASK(sentence):\n",
     "    global kb\n",
     "\n",
@@ -87,9 +90,11 @@
     "                ask_list.insert(0, nCNF)\n",
     "    else:\n",
     "        ask_list = [neg]\n",
-    "# Create a new list combining the asked sentence and kb.\n",
+    "\n",
+    "    # Create a new list combining the asked sentence and kb.\n",
     "    # Resolution will happen between the items in the list.\n",
     "    clauses = ask_list + kb[:]\n",
+    "    \n",
     "    while True:\n",
     "        new_clauses = []\n",
     "        for c1 in clauses:\n",
@@ -113,15 +118,7 @@
     "\n",
     "        if new_in_clauses:\n",
     "            return False\n",
-    "    return False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return False\n",
     "def resolve(arg_one, arg_two):\n",
     "    resolved = False\n",
     "\n",
@@ -151,7 +148,7 @@
     "            # cancel out two literals such as 'a' $ ['not', 'a']\n",
     "            if a1 == a2:\n",
     "                if a1_not != a2_not:\n",
-    "                     # Return False if resolution already happend\n",
+    "                    # Return False if resolution already happend\n",
     "                    # but contradiction still exists.\n",
     "                    if resolved:\n",
     "                        return False\n",
@@ -160,7 +157,8 @@
     "                        resolve_s1 = i\n",
     "                        resolve_s2 = j\n",
     "                        break\n",
-    "                    # Return False if not resolution happened\n",
+    "\n",
+    "    # Return False if not resolution happened\n",
     "    if not resolved:\n",
     "        return False\n",
     "\n",
@@ -177,43 +175,19 @@
     "    elif len(result) > 1:\n",
     "        result.insert(0, 'or')\n",
     "\n",
-    "    return result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return result\n",
     "def make_sentence(arg):\n",
     "    if isLiteral(arg) or isNotList(arg):\n",
     "        return [arg]\n",
     "    if isOrList(arg):\n",
     "        return clear_duplicate(arg[1:])\n",
-    "    return"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return\n",
     "def clear_duplicate(arg):\n",
     "    result = []\n",
     "    for i in range(0, len(arg)):\n",
     "        if arg[i] not in arg[i+1:]:\n",
     "            result.append(arg[i])\n",
-    "    return result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return result\n",
     "def isClause(sentence):\n",
     "    if isLiteral(sentence):\n",
     "        return True\n",
@@ -229,15 +203,9 @@
     "            elif not isClause(sentence[i]):\n",
     "                return False\n",
     "        return True\n",
-    "    return False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return False\n",
+    "\n",
+    "# Check if a sentence is a legal CNF.\n",
     "def isCNF(sentence):\n",
     "    if isClause(sentence):\n",
     "        return True\n",
@@ -246,15 +214,7 @@
     "            if not isClause(s):\n",
     "                return False\n",
     "        return True\n",
-    "    return False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return False\n",
     "def negation(sentence):\n",
     "    if isLiteral(sentence):\n",
     "        return ['not', sentence]\n",
@@ -278,29 +238,15 @@
     "            else:\n",
     "                result.append(['not', i])\n",
     "        return result\n",
-    "    return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return None\n",
+    "\n",
+    "# Convert a sentence into CNF.\n",
     "def convertCNF(sentence):\n",
     "    while not isCNF(sentence):\n",
     "        if sentence is None:\n",
     "            return None\n",
     "        sentence = makeCNF(sentence)\n",
-    "    return sentence"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return sentence\n",
     "def makeCNF(sentence):\n",
     "    if isLiteral(sentence):\n",
     "        return sentence\n",
@@ -328,7 +274,97 @@
     "        # Implication Elimination:\n",
     "        if operand == 'implies' and len(sentence) == 3:\n",
     "            return makeCNF(['or', ['not', makeCNF(sentence[1])], makeCNF(sentence[2])])\n",
-    "            # Biconditional Elimination:"
+    "\n",
+    "        # Biconditional Elimination:\n",
+    "        if operand == 'biconditional' and len(sentence) == 3:\n",
+    "            s1 = makeCNF(['implies', sentence[1], sentence[2]])\n",
+    "            s2 = makeCNF(['implies', sentence[2], sentence[1]])\n",
+    "            return makeCNF(['and', s1, s2])\n",
+    "\n",
+    "        if isAndList(sentence):\n",
+    "            result = ['and']\n",
+    "            for i in range(1, len(sentence)):\n",
+    "                cnf = makeCNF(sentence[i])\n",
+    "                # Distributivity:\n",
+    "                if isAndList(cnf):\n",
+    "                    for i in range(1, len(cnf)):\n",
+    "                        result.append(makeCNF(cnf[i]))\n",
+    "                    continue\n",
+    "                result.append(makeCNF(cnf))\n",
+    "            return result\n",
+    "\n",
+    "        if isOrList(sentence):\n",
+    "            result1 = ['or']\n",
+    "            for i in range(1, len(sentence)):\n",
+    "                cnf = makeCNF(sentence[i])\n",
+    "                # Distributivity:\n",
+    "                if isOrList(cnf):\n",
+    "                    for i in range(1, len(cnf)):\n",
+    "                        result1.append(makeCNF(cnf[i]))\n",
+    "                    continue\n",
+    "                result1.append(makeCNF(cnf))\n",
+    "\n",
+    "            # Associativity:\n",
+    "            while True:\n",
+    "                result2 = ['and']\n",
+    "                and_clause = None\n",
+    "                for r in result1:\n",
+    "                     if isAndList(r):\n",
+    "                        and_clause = r\n",
+    "                        break\n",
+    "\n",
+    "                # Finish when there's no more 'and' lists\n",
+    "                # inside of 'or' lists\n",
+    "                if not and_clause:\n",
+    "                    return result1\n",
+    "\n",
+    "                result1.remove(and_clause)\n",
+    "\n",
+    "                for i in range(1, len(and_clause)):\n",
+    "                    temp = ['or', and_clause[i]]\n",
+    "                    for o in result1[1:]:\n",
+    "                        temp.append(makeCNF(o))\n",
+    "                    result2.append(makeCNF(temp))\n",
+    "                result1 = makeCNF(result2)\n",
+    "            return None\n",
+    "    return None\n",
+    "def isLiteral(item):\n",
+    "    if type(item).__name__ == 'str':\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "def isNotList(item):\n",
+    "    if type(item).__name__ == 'list':\n",
+    "        if len(item) == 2:\n",
+    "            if item[0] == 'not':\n",
+    "                return True\n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "def isAndList(item):\n",
+    "    if type(item).__name__ == 'list':\n",
+    "        if len(item) > 2:\n",
+    "            if item[0] == 'and':\n",
+    "                return True\n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "def isOrList(item):\n",
+    "    if type(item).__name__ == 'list':\n",
+    "        if len(item) > 2:\n",
+    "            if item[0] == 'or':\n",
+    "                return True\n",
+    "    return False\n",
+    "\n",
+    "CLEAR()\n",
+    "#Testcase-1\n",
+    "TELL('a')\n",
+    "TELL('b')\n",
+    "TELL('c')\n",
+    "TELL('d')\n",
+    "ASK(['or', 'a', 'b', 'c', 'd'])\n",
+    "                        "
    ]
   }
  ]
