--- a/kbresolution/RESOLUTION.ipynb
+++ b/kbresolution/RESOLUTION.ipynb
@@ -28,20 +28,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 1
-    }
-   ],
+   "outputs": [],
    "source": [
     "kb = []\n",
     "\n",
@@ -357,14 +346,62 @@
     "                return True\n",
     "    return False\n",
     "\n",
+    "\n",
+    "                        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
+   "source": [
     "CLEAR()\n",
     "#Testcase-1\n",
     "TELL('a')\n",
     "TELL('b')\n",
     "TELL('c')\n",
     "TELL('d')\n",
-    "ASK(['or', 'a', 'b', 'c', 'd'])\n",
-    "                        "
+    "ASK(['or', 'a', 'b', 'c', 'd'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "source": [
+    "\n",
+    "CLEAR()\n",
+    "#Testcase-2\n",
+    "TELL('a')\n",
+    "TELL('b')\n",
+    "TELL(['or', ['not', 'a'], 'b'])\n",
+    "TELL(['or', 'c', 'd'])\n",
+    "TELL('d')\n",
+    "ASK('c')"
    ]
   }
  ]
